saved file changes

--- a/Valerie_requests-json-nlp.ipynb
+++ b/Valerie_requests-json-nlp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
     "\n",
     "if polarity > 0:\n",
     "    sentiment = \"positive\"\n",
-    "elif poloarity < 0: \n",
+    "elif polarity < 0: \n",
     "    sentiment = \"negative\"\n",
     "else:\n",
     "    sentiment = \"neutral\"\n",
@@ -310,10 +310,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lyrics for 'I'm Still Standing' by Elton John saved to 'standing.json'.\n",
+      "Lyrics for 'Leather and Lace' by Stevie Nicks saved to 'leather.json'.\n",
+      "Lyrics for 'Walking in Memphis' by Marc Cohn saved to 'memphis.json'.\n",
+      "Lyrics for 'Second Chance' by Shinedown saved to 'secondchance.json'.\n"
+     ]
+    }
+   ],
    "source": [
+    "import requests\n",
+    "import json\n",
     "def fetch_and_save_lyrics(artist, song, filename):\n",
     "    \"\"\"\n",
     "    Fetches lyrics for a specified song by a specified artist from lyrics.ovh API\n",
@@ -330,13 +343,17 @@
     "\n",
     "    print(f\"Lyrics for '{song}' by {artist} saved to '{filename}'.\")\n",
     "\n",
-    "    fetch_and_save_lyrics(\"Goodbye Yellow Brick Road (Remastered 2014)\", \"Elton John\", \"yellow.json\")\n",
-    "    fetch_and_save_lyrics(\"Leather and Lace\", \"Stevie Nicks\", \"leather.json\")\n",
-    "    fetch_and_save_lyrics(\"Walking in Memphis\", \"Marc Cohn\", \"memphis.json\")\n",
-    "    fetch_and_save_lyrics(\"Second Chance\", \"Shinedown\", \"secondchance.json\")\n",
-    "\n",
-    "   \n",
-    "\n"
+    "fetch_and_save_lyrics(\"Elton John\", \"I'm Still Standing\", \"standing.json\")\n",
+    "fetch_and_save_lyrics(\"Stevie Nicks\", \"Leather and Lace\", \"leather.json\")\n",
+    "fetch_and_save_lyrics(\"Marc Cohn\", \"Walking in Memphis\", \"memphis.json\")\n",
+    "fetch_and_save_lyrics(\"Shinedown\", \"Second Chance\", \"secondchance.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4: Write a function to check the polarity score for the chosen songs"
    ]
   },
   {
@@ -344,6 +361,98 @@
    "metadata": {},
    "source": [
     "4. Write a function that takes the name of a file that contains song lyrics, loads the file, performs sentiment analysis, and returns the polarity score.  Use this function to print the polarity scores (with the name of the song) of the three files you created in question 3.  Does the reported polarity match your understanding of the song's lyrics? Why or why not do you think that might be?  Answer the questions in either a comment in the code cell or a markdown cell under the code cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity score for 'I'm Still Standing'is 0.10801767676767678\n",
+      "Polarity score for 'Leather and Lace'is 0.19015873015873014\n",
+      "Polarity score for 'Second Chance'is 0.24411764705882355\n",
+      "Polarity score for 'Walking in Memphis'is 0.015724206349206345\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\" The polarity score for these songs surprised me a little bit, especially Leather and Lace. \\nI didn't expect that song to have a higher polarity level than I'm Still Standing or Walking in Memphis.\\n\""
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "\n",
+    "def analyze_sentiment_from_file(filename):\n",
+    "    \"\"\"\n",
+    "    Analyzes the sentiment of lyrics from a specified file containing song lyrics\n",
+    "    and returns the polarity score.\n",
+    "    \"\"\"\n",
+    "    # Load the lyrics data from the file\n",
+    "    with open(filename, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "\n",
+    "    # Extract the lyrics from the data\n",
+    "    lyrics = data.get('lyrics', '')\n",
+    "\n",
+    "    # Perform sentiment analysis on the lyrics\n",
+    "    doc = nlp(lyrics)\n",
+    "    polarity = doc._.blob.polarity\n",
+    "\n",
+    "    return polarity\n",
+    "\n",
+    "#Testing the function on the songs\n",
+    "songs = [\n",
+    "    (\"I'm Still Standing\", \"standing.json\"),\n",
+    "    (\"Leather and Lace\", \"leather.json\"),\n",
+    "    (\"Second Chance\", \"secondchance.json\"),\n",
+    "    (\"Walking in Memphis\", \"memphis.json\"),\n",
+    "]\n",
+    "\n",
+    "# Print the polarity score for each song\n",
+    "for song, filename in songs:\n",
+    "    polarity = analyze_sentiment_from_file(filename)\n",
+    "    if polarity is not None:\n",
+    "        print(f\"Polarity score for '{song}'is {polarity}\")\n",
+    "\n",
+    "\"\"\" The polarity score for these songs surprised me a little bit, especially Leather and Lace. \n",
+    "I didn't expect that song to have a higher polarity level than I'm Still Standing or Walking in Memphis.\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert notebook to an HTML file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Valerie_requests-json-nlp.ipynb to html\n",
+      "[NbConvertApp] Writing 290626 bytes to Valerie_requests-json-nlp.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html Valerie_requests-json-nlp.ipynb"
    ]
   },
   {
